[gd_scene load_steps=14 format=3 uid="uid://taijyu263ucn"]

[ext_resource type="Texture2D" uid="uid://cclp4rdrb6m5u" path="res://images/bw.png" id="1_bnnrx"]
[ext_resource type="Script" path="res://scenes/game_board.gd" id="1_i5wbx"]
[ext_resource type="Texture2D" uid="uid://nwtpx3bkp5lg" path="res://images/5/MCBlocksBlackOutline.png" id="2_6terr"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="2_dnxpm"]
[ext_resource type="Script" path="res://scenes/Camera2D.gd" id="2_g010x"]
[ext_resource type="Texture2D" uid="uid://b0rrmt2xuscg8" path="res://images/5/MCBlocksColorOutline.png" id="3_yhmfb"]
[ext_resource type="Script" path="res://scenes/CharacterBody2D.gd" id="5_hkkkc"]
[ext_resource type="Texture2D" uid="uid://c3ttk0l7n600t" path="res://images/blackBishop.png" id="5_vmcct"]
[ext_resource type="Script" path="res://scenes/statsUI.gd" id="7_qdivg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3bwaj"]
texture = ExtResource("1_bnnrx")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/custom_data_0 = 3
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/custom_data_0 = 3
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/custom_data_0 = 3
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
4:3/0/custom_data_0 = 3
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
4:4/0/custom_data_0 = 3
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4o1qq"]
texture = ExtResource("2_6terr")
margins = Vector2i(4, 4)
separation = Vector2i(8, 8)
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:2/0 = 0
7:2/0 = 0
12:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yvlag"]
texture = ExtResource("3_yhmfb")
margins = Vector2i(4, 4)
separation = Vector2i(8, 8)
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/custom_data_0 = 1
1:0/0 = 0
1:0/0/custom_data_0 = 1
2:0/0 = 0
2:0/0/custom_data_0 = 3
3:0/0 = 0
3:0/0/custom_data_0 = 2
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_gtj67"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(24, 12)
custom_data_layer_0/name = "terrain"
custom_data_layer_0/type = 2
sources/1 = SubResource("TileSetAtlasSource_3bwaj")
sources/2 = SubResource("TileSetAtlasSource_4o1qq")
sources/3 = SubResource("TileSetAtlasSource_yvlag")

[node name="gameBoard" type="Node2D"]
script = ExtResource("1_i5wbx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(8, 46)
zoom = Vector2(1.5, 1.5)
limit_left = -1000
limit_top = -1000
limit_right = 1000
limit_bottom = 1000
limit_smoothed = true
script = ExtResource("2_g010x")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(-11, 14)
tile_set = SubResource("TileSet_gtj67")
format = 2
layer_0/name = "layer 0"
layer_1/name = "layer 1"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "layer 2"
layer_2/tile_data = PackedInt32Array()
script = ExtResource("2_dnxpm")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
visible = false
script = ExtResource("5_hkkkc")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(0, -8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_vmcct")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("7_qdivg")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 112.0
offset_bottom = 88.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer/PanelContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "health"

[node name="healthStat" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "23434"

[node name="Label3" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "attack"

[node name="attackStat" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "235"

[node name="Label5" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "defense"

[node name="defenseStat" type="Label" parent="CanvasLayer/MarginContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "4324"

[node name="Hotbar" type="MarginContainer" parent="CanvasLayer"]
offset_left = 136.0
offset_top = 550.0
offset_right = 1080.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Hotbar"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="item1" type="Label" parent="CanvasLayer/Hotbar/HBoxContainer"]
layout_mode = 2
text = "Unit 1"

[node name="item2" type="Label" parent="CanvasLayer/Hotbar/HBoxContainer"]
layout_mode = 2
text = "Unit 2"

[node name="item3" type="Label" parent="CanvasLayer/Hotbar/HBoxContainer"]
layout_mode = 2
text = "Unit 3"

[node name="item4" type="Label" parent="CanvasLayer/Hotbar/HBoxContainer"]
layout_mode = 2
text = "Unit 4"
